# HexMob

./: .copier-answers.yml  .gitattributes  .gitignore  CHANGELOG.md  README.md  build.gradle.kts  gradle.properties  pyproject.toml  settings.gradle.kts
.github/workflows/: build.yml  release.yml
buildSrc/: build.gradle.kts  settings.gradle.kts
buildSrc/src/main/kotlin/hexmob/: java.gradle.kts  minecraft.gradle.kts  mod-publish.gradle.kts  platform.gradle.kts
buildSrc/src/main/kotlin/hexmob/utils/: mod-dependencies.gradle.kts
common/: build.gradle.kts
common/src/main/java/pub/pigeon/yggdyy/hexmob/mixin/: BlockSconceMixin.java  EntityRenderDispatcherMixin.java  GeodeFeatureMixin.java  HexMobMixinConfigPlugin.java  LevelMixin.java  MixinDatagenMain.java  ServerLevelMixin.java  StrongholdPieces$LibraryAccessor.java  StrongholdPiecesMixin.java
common/src/main/kotlin/pub/pigeon/yggdyy/hexmob/: HexMob.kt  HexMobAbstractions.kt  HexMobClient.kt
common/src/main/kotlin/pub/pigeon/yggdyy/hexmob/config/: HexMobClientConfig.kt  HexMobServerConfig.kt
common/src/main/kotlin/pub/pigeon/yggdyy/hexmob/content/: HMEntityPart.kt  IHMMultipartEntity.kt
common/src/main/kotlin/pub/pigeon/yggdyy/hexmob/datagen/: HexMobActionTags.kt
common/src/main/kotlin/pub/pigeon/yggdyy/hexmob/networking/: HexMobNetworking.kt
common/src/main/kotlin/pub/pigeon/yggdyy/hexmob/registry/: HexMobActions.kt  HexMobBlockEntityRenderers.kt  HexMobBlocks.kt  HexMobEntities.kt  HexMobEntityAttributes.kt  HexMobEntityRenderers.kt  HexMobItemProperties.kt  HexMobItems.kt  HexMobRegistrar.kt  HexMobStructurePieceTypes.kt  HexMobTags.kt
common/src/main/resources/: architectury.common.json  hexmob-common.mixins.json
common/src/main/resources/assets/hexmob/animations/entity/: amethyst_silverfish.animation.json
common/src/main/resources/assets/hexmob/geo/entity/: amethyst_silverfish.geo.json
common/src/main/resources/assets/hexmob/lang/: en_us.flatten.json5
common/src/main/resources/data/hexmob/loot_tables/blocks/: stimulated_slate.json
common/src/main/resources/data/hexmob/loot_tables/chests/: akashic_library.json
common/src/main/resources/data/hexmob/loot_tables/entities/: crying_amethyst.json
common/src/main/resources/data/hexmob/recipes/: stimulated_slate.json
common/src/main/resources/data/hexmob/tags/blocks/: akashic_library_wall.json  geode_wall.json
doc/: README.md  hexdoc.toml  nodemon.json
doc/resources/assets/hexmob/lang/: en_us.flatten.json5
doc/src/hexdoc_hexmob/: _hooks.py
fabric/: build.gradle.kts  gradle.properties
fabric/src/main/resources/: fabric.mod.json  hexmob-fabric.mixins.json
forge/: build.gradle.kts  gradle.properties
forge/src/main/resources/: hexmob-forge.mixins.json  pack.mcmeta
gradle/: libs.versions.toml
libs/: README.md
(+47 files in other folders)
